--- a/Makefile.in
+++ b/Makefile.in
@@ -28,7 +28,7 @@
 # OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 # SUCH DAMAGE.
 #
-# @(#)$Id: Makefile.in,v 1.15 2002-01-21 21:37:35 f Exp $
+# @(#)$Id: Makefile.in,v 1.16 2002-02-19 20:32:37 f Exp $
 
 # targets recognised by this makefile:
 #   all, everything	- compiles ircii, ircio, ircflush and wserv
@@ -154,7 +154,7 @@ MFLAGS ='CC=$(CC)'					\
 
 all: scrollz scrollz.1
 
-install: all installbin installdirs installman
+install: all installbin installdirs installman installhelp
 
 scrollz: source/Makefile Makefile
 	@cd include; $(MAKE)
@@ -163,7 +163,8 @@ scrollz: source/Makefile Makefile
 scrollz.1: scrollz.1.in
 	sed -e "s,SHAREDIR,$(IRCSHARE)," < scrollz.1.in > scrollz.1
 
-installeverything: install installman installflush installio installwserv
+installeverything:  install installman installflush installio \
+		    installwserv installhelp
 
 everything: all ircflush ircio wserv
 
@@ -205,6 +206,11 @@ installwserv: wserv installdirs
 installdirs:
 	umask 022; ./mkinstalldirs $(IRCSHARE) $(bindir) \
 		$(TRANS_PATH) $(INSTALL_SCRIPT) $(HELP_DIR) $(IRCDOC)
+
+installhelp:
+	$(INSTALL_HELP_CMD)
+	find $(HELP_DIR) -type d -print | xargs chmod a+rx
+	find $(HELP_DIR) -type f -print | xargs chmod a+r
 
 clena clean:
 	@-if test -f source/Makefile; then cd source; $(MAKE) clean; fi
