Added MULTI_SERVER_OV to allow one OperVision window to receive messages from several servers.

--- a/include/defs.h.in
+++ b/include/defs.h.in
@@ -340,6 +340,9 @@
 /* Define this if you have getloadavg(), BSD systems do */
 #undef HAVEGETLOADAVG
 
+/* Define this if you want one OperVision window for several servers */
+#undef MULTI_SERVER_OV
+
 /* Define this if you want client with ANSI (color) support */
 #define WANTANSI
 
