--- a/Makefile.in
+++ b/Makefile.in
@@ -28,7 +28,7 @@
 # OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 # SUCH DAMAGE.
 #
-# @(#)$Id: Makefile.in,v 1.19 2004-01-04 17:18:34 f Exp $
+# @(#)$Id: Makefile.in,v 1.20 2004-05-12 15:53:07 f Exp $
 
 # targets recognised by this makefile:
 #   all, everything	- compiles ircii, ircio, ircflush and wserv
@@ -54,6 +54,8 @@ exec_prefix = @exec_prefix@
 bindir = @bindir@
 sharedir = @prefix@/share
 mandir = ${prefix}/man/man1
+
+DESTDIR =
 
 # Where the ircII binary will be installed.
 # 'make install' will compile and install the program
@@ -187,29 +189,30 @@ wserv: source/wserv.c source/term.c source/Makefile
 installbin: installirc
 
 installirc: scrollz installdirs
-	@if test -f $(INSTALL_IRC).old; then $(RM) $(INSTALL_IRC).old; fi
-	@if test -f $(INSTALL_IRC); then $(MV) $(INSTALL_IRC) $(INSTALL_IRC).old; fi
-	$(RM) $(INSTALL_IRC)
-	$(INSTALL) source/scrollz $(INSTALL_IRC)-$(VERSION)
-	@(cd $(bindir) ; $(LN) scrollz-$(VERSION) scrollz)
-	@cp doc/ScrollZ.doc $(IRCDOC)
+	@if test -f $(DESTDIR)/$(INSTALL_IRC).old; then $(RM) $(DESTDIR)/$(INSTALL_IRC).old; fi
+	@if test -f $(DESTDIR)/$(INSTALL_IRC); then $(MV) $(DESTDIR)/$(INSTALL_IRC) $(INSTALL_IRC).old; fi
+	$(RM) $(DESTDIR)/$(INSTALL_IRC)
+	$(INSTALL) source/scrollz $(DESTDIR)/$(INSTALL_IRC)-$(VERSION)
+	@(cd $(DESTDIR)/$(bindir) ; $(LN) scrollz-$(VERSION) scrollz)
+	@cp doc/ScrollZ.doc $(DESTDIR)/$(IRCDOC)
 
 installman: scrollz.1
-	$(INSTALL) scrollz.1 $(mandir)
+	$(INSTALL) scrollz.1 $(DESTDIR)/$(mandir)
 
 installserv: installio
 installio: ircio installdirs
-	$(INSTALL) source/ircio $(INSTALL_IRCIO)
+	$(INSTALL) source/ircio $(DESTDIR)/$(INSTALL_IRCIO)
 
 installflush: ircflush installdirs
-	$(INSTALL) source/ircflush $(INSTALL_IRCFLUSH)
+	$(INSTALL) source/ircflush $(DESTDIR)/$(INSTALL_IRCFLUSH)
 
 installwserv: wserv installdirs
-	$(INSTALL) source/wserv $(INSTALL_WSERV)
+	$(INSTALL) source/wserv $(DESTDIR)/$(INSTALL_WSERV)
 
 installdirs:
-	umask 022; ./mkinstalldirs $(IRCSHARE) $(bindir) $(mandir) \
-		$(TRANS_PATH) $(INSTALL_SCRIPT) $(HELP_DIR) $(IRCDOC)
+	umask 022; ./mkinstalldirs $(DESTDIR)/$(IRCSHARE) $(DESTDIR)/$(bindir) \
+		$(DESTDIR)/$(TRANS_PATH) $(DESTDIR)/$(INSTALL_SCRIPT) \
+		$(DESTDIR)/$(HELP_DIR) $(DESTDIR)/$(IRCDOC)
 
 installhelp:
 	$(INSTALL_HELP_CMD)
@@ -218,8 +221,8 @@ installhelp:
 
 installtranslation: installdirs
 	$(INSTALL_TRANSLATION_CMD)
-	find $(TRANS_PATH) -type d -print | xargs chmod a+rx
-	find $(TRANS_PATH) -type f -print | xargs chmod a+r
+	find $(DESTDIR)/$(TRANS_PATH) -type d -print | xargs chmod a+rx
+	find $(DESTDIR)/$(TRANS_PATH) -type f -print | xargs chmod a+r
 
 clena clean:
 	@-if test -f source/Makefile; then cd source; $(MAKE) clean; fi
