--- a/configure.in
+++ b/configure.in
@@ -31,9 +31,9 @@ dnl
 dnl thanks to the screen 3.3 configure.in for giving me examples to
 dnl work from and steal ;)
 dnl
-dnl @(#)$Id: configure.in,v 1.32 2005-01-18 19:22:30 f Exp $
+dnl @(#)$Id: configure.in,v 1.33 2005-08-03 15:40:15 f Exp $
 
-AC_REVISION($Revision: 1.32 $)dnl
+AC_REVISION($Revision: 1.33 $)dnl
 AC_INIT(${srcdir}/source/irc.c)
 AC_CONFIG_HEADER(include/defs.h)
 
@@ -62,7 +62,7 @@ CATEGORIES='build change-request doc pending runtime'
 AC_SUBST(CATEGORIES)
 
 dnl so that the generated configure has an id.
-echo '$Id: configure.in,v 1.32 2005-01-18 19:22:30 f Exp $' > /dev/null
+echo '$Id: configure.in,v 1.33 2005-08-03 15:40:15 f Exp $' > /dev/null
 
 dnl
 dnl initial stuff
@@ -1184,29 +1184,30 @@ AC_TRY_LINK([
 
 AC_MSG_CHECKING(whether to enable SSL)
 AC_ARG_WITH(ssl,
-[  --with-ssl[=PATH]       Prefix where OpenSSL is installed (optional)],
+[  --with-ssl[=PATH]       Prefix where GNU TLS is installed (optional)],
 [ case "$withval" in
   no)  AC_MSG_RESULT(no)
        ;;		
   *) AC_MSG_RESULT(yes)
      if test "x$withval" = "xyes";
      then
-       openssl_prefix=""
+       gnutls_prefix=""
      else
-       openssl_prefix="$withval"
+       gnutls_prefix="$withval"
      fi
-     AC_MSG_CHECKING(for OpenSSL)
-     if test -d "$openssl_prefix/include" -a -n "$openssl_prefix"; then
-       CFLAGS="-I$openssl_prefix/include $CFLAGS"
+     AC_MSG_CHECKING(for GNU TLS)
+     if test -d "$gnutls_prefix/include" -a -n "$gnutls_prefix"; then
+       CFLAGS="-I$gnutls_prefix/include $CFLAGS"
      fi
-     if test -d "$openssl_prefix/lib" -a -n "$openssl_prefix"; then
-       LIBS="-L$openssl_prefix/lib $LIBS -lssl -lcrypto"
+     CFLAGS="$CFLAGS `libgnutls-config --cflags`"
+     if test -d "$gnutls_prefix/lib" -a -n "$gnutls_prefix"; then
+       LIBS="-L$gnutls_prefix/lib $LIBS -lssl -lcrypto"
      else
-       LIBS="$LIBS -lssl -lcrypto"
+       LIBS="$LIBS `libgnutls-config --libs`"
      fi
      AC_TRY_LINK([
-#include <openssl/opensslv.h>
-],   [ return OPENSSL_VERSION_NUMBER; ],
+#include <gnutls/gnutls.h>
+],   [ gnutls_check_version(NULL); ],
      [ AC_MSG_RESULT(yes)
      AC_DEFINE(HAVE_SSL)
      ssl=yes ],
