--- a/configure.in
+++ b/configure.in
@@ -31,9 +31,9 @@ dnl
 dnl thanks to the screen 3.3 configure.in for giving me examples to
 dnl work from and steal ;)
 dnl
-dnl @(#)$Id: configure.in,v 1.33 2005-08-03 15:40:15 f Exp $
+dnl @(#)$Id: configure.in,v 1.34 2005-08-08 18:49:50 f Exp $
 
-AC_REVISION($Revision: 1.33 $)dnl
+AC_REVISION($Revision: 1.34 $)dnl
 AC_INIT(${srcdir}/source/irc.c)
 AC_CONFIG_HEADER(include/defs.h)
 
@@ -62,7 +62,7 @@ CATEGORIES='build change-request doc pending runtime'
 AC_SUBST(CATEGORIES)
 
 dnl so that the generated configure has an id.
-echo '$Id: configure.in,v 1.33 2005-08-03 15:40:15 f Exp $' > /dev/null
+echo '$Id: configure.in,v 1.34 2005-08-08 18:49:50 f Exp $' > /dev/null
 
 dnl
 dnl initial stuff
@@ -1238,9 +1238,11 @@ AC_ARG_ENABLE(regexp,
      LIBS="$ac_save_LIBS"
      regexp=no ])
      ;;
-  *)   AC_MSG_RESULT(no)
-       ;;		
   esac ])
+if test "x$regexp" = "xno" -o "x$regexp" = "x" ; then
+    AC_MSG_RESULT(no)
+    regexp=no
+fi
 
 if test -n "$hpux"
 then
