--- a/configure.in
+++ b/configure.in
@@ -31,9 +31,9 @@ dnl
 dnl thanks to the screen 3.3 configure.in for giving me examples to
 dnl work from and steal ;)
 dnl
-dnl @(#)$Id: configure.in,v 1.38 2006-10-31 12:31:27 f Exp $
+dnl @(#)$Id: configure.in,v 1.39 2007-03-30 15:27:36 f Exp $
 
-AC_REVISION($Revision: 1.38 $)dnl
+AC_REVISION($Revision: 1.39 $)dnl
 AC_INIT(${srcdir}/source/irc.c)
 AC_CONFIG_HEADER(include/defs.h)
 
@@ -62,7 +62,7 @@ CATEGORIES='build change-request doc pending runtime'
 AC_SUBST(CATEGORIES)
 
 dnl so that the generated configure has an id.
-echo '$Id: configure.in,v 1.38 2006-10-31 12:31:27 f Exp $' > /dev/null
+echo '$Id: configure.in,v 1.39 2007-03-30 15:27:36 f Exp $' > /dev/null
 
 dnl
 dnl initial stuff
@@ -1228,6 +1228,46 @@ AC_ARG_WITH(ssl,
   esac ],
   AC_MSG_RESULT(no)
 )
+
+AC_MSG_CHECKING(whether to enable OpenSSL)
+if test "x$ssl" = "xyes"; then
+AC_MSG_RESULT(no (you enabled GNU TLS support))
+else
+AC_ARG_WITH(openssl,
+[  --with-openssl[=PATH]   Prefix where OpenSSL is installed (optional)],
+[ case "$withval" in
+  no)  AC_MSG_RESULT(no)
+       ;;		
+  *) AC_MSG_RESULT(yes)
+     if test "x$withval" = "xyes";
+     then
+       openssl_prefix=""
+     else
+       openssl_prefix="$withval"
+     fi
+     AC_MSG_CHECKING(for OpenSSL)
+     if test -d "$openssl_prefix/include" -a -n "$openssl_prefix"; then
+       CFLAGS="-I$openssl_prefix/include $CFLAGS"
+     fi
+     if test -d "$openssl_prefix/lib" -a -n "$openssl_prefix"; then
+       LIBS="-L$openssl_prefix/lib $LIBS -lssl -lcrypto"
+     else
+       LIBS="$LIBS -lssl -lcrypto"
+     fi
+     AC_TRY_LINK([
+#include <openssl/opensslv.h>
+],   [ return OPENSSL_VERSION_NUMBER; ],
+     [ AC_MSG_RESULT(yes)
+     AC_DEFINE(HAVE_OPENSSL)
+     openssl=yes ],
+     [ AC_MSG_RESULT(no)
+     LIBS="$ac_save_LIBS"
+     openssl=no ])
+     ;;
+  esac ],
+  AC_MSG_RESULT(no)
+)
+fi
 
 AC_MSG_CHECKING(whether to enable regexp support)
 AC_ARG_ENABLE(regexp,
