--- a/configure.in
+++ b/configure.in
@@ -31,9 +31,9 @@ dnl
 dnl thanks to the screen 3.3 configure.in for giving me examples to
 dnl work from and steal ;)
 dnl
-dnl @(#)$Id: configure.in,v 1.39 2007-03-30 15:27:36 f Exp $
+dnl @(#)$Id: configure.in,v 1.40 2008-03-08 15:22:13 f Exp $
 
-AC_REVISION($Revision: 1.39 $)dnl
+AC_REVISION($Revision: 1.40 $)dnl
 AC_INIT(${srcdir}/source/irc.c)
 AC_CONFIG_HEADER(include/defs.h)
 
@@ -62,7 +62,7 @@ CATEGORIES='build change-request doc pending runtime'
 AC_SUBST(CATEGORIES)
 
 dnl so that the generated configure has an id.
-echo '$Id: configure.in,v 1.39 2007-03-30 15:27:36 f Exp $' > /dev/null
+echo '$Id: configure.in,v 1.40 2008-03-08 15:22:13 f Exp $' > /dev/null
 
 dnl
 dnl initial stuff
@@ -1293,6 +1293,40 @@ if test "x$regexp" = "xno" -o "x$regexp" = "x" ; then
     AC_MSG_RESULT(no)
     regexp=no
 fi
+
+AC_MSG_CHECKING(whether to enable FiSH support)
+AC_ARG_WITH(miracl,
+[  --with-miracl=PATH      Prefix where MIRACL is installed],
+[ case "$withval" in
+  no)  AC_MSG_RESULT(no)
+       ;;             
+  *) AC_MSG_RESULT(yes)
+     if test "x$withval" = "xyes";
+     then
+       miracl_prefix=""
+     else
+       miracl_prefix="$withval"
+     fi
+     AC_MSG_CHECKING(for MIRACL)
+     if test -n "$miracl_prefix"; then
+       CFLAGS="-I$miracl_prefix $CFLAGS"
+     fi
+     if test -n "$miracl_prefix"; then
+       LIBS="$LIBS $miracl_prefix/miracl.a"
+     fi
+     AC_TRY_LINK([
+#include "miracl.h"
+],   [ miracl *mip = mirsys(10, 1); ],
+     [ AC_MSG_RESULT(yes)
+     AC_DEFINE(HAVE_MIRACL)
+     miracl=yes ],
+     [ AC_MSG_RESULT(no)
+     LIBS="$ac_save_LIBS"
+     miracl=no ])
+     ;;
+  esac ],
+  AC_MSG_RESULT(no)
+)
 
 if test -n "$hpux"
 then
