--- a/configure.in
+++ b/configure.in
@@ -31,9 +31,9 @@ dnl
 dnl thanks to the screen 3.3 configure.in for giving me examples to
 dnl work from and steal ;)
 dnl
-dnl @(#)$Id: configure.in,v 1.53 2009-06-29 15:16:33 f Exp $
+dnl @(#)$Id: configure.in,v 1.54 2009-06-30 15:42:36 f Exp $
 
-AC_REVISION($Revision: 1.53 $)dnl
+AC_REVISION($Revision: 1.54 $)dnl
 AC_INIT(${srcdir}/source/irc.c)
 AC_CONFIG_HEADER(include/defs.h)
 
@@ -62,7 +62,7 @@ CATEGORIES='build change-request doc pending runtime'
 AC_SUBST(CATEGORIES)
 
 dnl so that the generated configure has an id.
-echo '$Id: configure.in,v 1.53 2009-06-29 15:16:33 f Exp $' > /dev/null
+echo '$Id: configure.in,v 1.54 2009-06-30 15:42:36 f Exp $' > /dev/null
 
 dnl
 dnl initial stuff
@@ -219,7 +219,21 @@ AC_EGREP_CPP(yes,
 #endif
 ], LIBS="$LIBS -lseq" seqptx=1 AC_MSG_RESULT(yes), AC_MSG_RESULT(no))
 
+AC_MSG_CHECKING(whether to enable UTF-8 (iconv) support)
+AC_ARG_ENABLE(utf8,
+[  --disable-utf8          Disable UTF-8 (iconv) support],
+[ case "$enableval" in
+  no) AC_MSG_RESULT(no)
+      ;;
+  *) AC_MSG_RESULT(yes)
+     ;;
+  esac ],
+[ AC_MSG_RESULT(yes)
+  enable_utf8=yes
+])
+
 dnl check for FreeBSD, so we can find iconv.h in /usr/local/include
+if test "x$enable_utf8" = "xyes" ; then
 AC_MSG_CHECKING(for FreeBSD)
 case "`uname -s`" in
   FreeBSD*)
@@ -231,26 +245,16 @@ case "`uname -s`" in
   *)
     AC_MSG_RESULT(no)
 esac
+fi
 
 AC_CHECK_HEADERS(sys/un.h sys/select.h sys/fcntl.h sys/ioctl.h sys/file.h sys/time.h sys/wait.h sys/twg_config.h sys/ptem.h sys/uio.h)dnl sys/ ones
 AC_CHECK_HEADERS(unistd.h fcntl.h string.h memory.h netdb.h limits.h)dnl non sys/ ones
 AC_CHECK_HEADERS(stdarg.h varargs.h, break)dnl look for varadic function header
 AC_CHECK_HEADERS(process.h termcap.h)dnl others
 
-AC_MSG_CHECKING(whether to enable UTF-8 (iconv) support)
-AC_ARG_ENABLE(utf8,
-[  --disable-utf8          Disable UTF-8 (iconv) support],
-[ case "$enableval" in
-  no) AC_MSG_RESULT(no)
-      ;;
-  *) AC_MSG_RESULT(yes)
-     AC_CHECK_HEADERS(iconv.h)dnl others
-     ;;
-  esac ],
-[ AC_MSG_RESULT(yes)
-  enable_utf8=yes
-  AC_CHECK_HEADERS(iconv.h)dnl others
-  ])
+if test "x$enable_utf8" = "xyes" ; then
+AC_CHECK_HEADERS(iconv.h)
+fi
 
 if test -n "$ultrix" -o -n "$nextstep"; then
   # POSIX termios is broken on Ultrix so don't look for it.
@@ -428,9 +432,11 @@ dnl
 dnl libiconv (Sunfreeware gcc)
 dnl
 dnl
+if test "x$enable_utf8" = "xyes" ; then
 if test -n "$svr4" -a -n "$GCC"
 then
   AC_CHECK_LIB(iconv, iconv_open, LIBS="$LIBS -liconv")
+fi
 fi
 
 dnl <term.h> is broken on most systems; ignoreit.
